--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,8 @@
   <p>
     <%= user.name %>
     <%= user.age %>
-    <%= link_to "削除", user_path(user.id),  # (user.id)...オブジェクトで(user)を渡すでも良い
+    <%= link_to "編集", edit_user_path(user.id) %>
+    <%= link_to "削除", user_path(user.id),  # (user.id)...オブジェクトで(user)を渡すでも良い
                         method: :delete, data: {confirm: "このユーザーを削除しますか？"} %>
   </p>
 <% end %>
